[package]
name = "htwrap"
version = "0.5.4"
edition = "2021"
description = "Framework-less Hyper client and server"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/htwrap"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loga = "0.5"
chrono = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-rustls = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
hyper-rustls = "0.26"
tower-service = "0.3"
rustls = "0.22"
hickory-resolver = "0.24"
rand = "0.8"
async-stream = "0.3"
async-trait = "0.1"
sha2 = "0.10"
